--- a/calculator.html
+++ b/calculator.html
@@ -4,95 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
     <title>Calculator</title>
-    <style>
-        body {
-            background-color: rgb(39, 38, 38);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-image: url(calci_background.jpg);
-            background-size: cover;
-            background-position: center;
-        }
-
-        .calculator {
-            width: 90%;
-            max-width: 350px;
-            border: 2px solid #ccc; /* Border for the calculator */
-            border-radius: 10px;
-            box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.2);
-            background: white;
-            overflow: hidden;
-        }
-
-        .calculator input[type=text] {
-            height: 80px;
-            font-size: 2rem;
-            text-align: left; /* Align text to the right */
-            border: none;
-            border-bottom: 2px solid #ccc; /* Border for the input field */
-            border-radius: 0; /* Remove border radius for flat top */
-            padding: 0 15px;
-            background-color: #000; /* Dark background for better contrast */
-            color: #fff; /* White text for visibility */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 0; /* Remove bottom margin to fit nicely */
-            box-sizing: border-box; /* Ensure padding is included in width */
-        }
-
-        .buttons {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 7px;
-            padding: 10px;
-        }
-
-        .buttons input[type=button] {
-            width: 100%;
-            height: 70px;
-            font-size: 1.5rem;
-            border: solid #ccc;
-            border-radius: 8px;
-            background: linear-gradient(200deg, #f9f9f9, #e0e0e0);
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2), inset 1px 1px 2px rgba(255, 255, 255, 0.7);
-            transition: background-color 0.3s, transform 0.2s;
-        }
-
-        .buttons input[type=button]:hover {
-            background: linear-gradient(145deg, #e0e0e0, #f9f9f9);
-            transform: scale(1.05);
-        }
-
-        .buttons input[type=button]:active {
-            animation: clickEffect 0.1s ease;
-        }
-
-        .buttons input[type=button].operator {
-            background: linear-gradient(145deg, #f9a825, #f57f17);
-            color: white;
-            border: none;
-        }
-
-        .buttons input[type=button].operator:hover {
-            background: linear-gradient(145deg, #f57f17, #f9a825);
-        }
-
-        @keyframes clickEffect {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(0.95);
-            }
-            100% {
-                transform: scale(1);
-            }
-        }
-    </style>
 </head>
 <body>
     <div class="calculator">
